--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </tr>
 </table></center>
 
-<center><a href="página_principal.html"> Boton de regreso </a></center>
+<center><a href="index.html"> Boton de regreso </a></center>
  
 <center><h4 font="Comic Sans MS">Gracias por darte vuelta por esta página :D!</h4></center>
 <center><h4 font="Comic Sans MS">CONTACTAME<br>Gmail:paolo.avalos@ucsp.edu.pe <br><a href="https://www.instagram.com/paolo_.avalos/?hl=es"><img src="menu/instagram.png" width="50" height="50" alt="boton instagram"></a></h4></center>
