--- a/index.html
+++ b/index.html
@@ -45,17 +45,10 @@
 
 <center><table border="4" bordercolor="black">
 <tr>
-<td colspan="3" bgcolor="#e16565"><center><h2>GALERÍA</h2></center></td>
+<td bgcolor="#e16565"><center><h2>PÁGINAS DE COMPAÑEROS DE MI CURSO</h2></center></td>
 <tr>
-<td bgcolor="#f9e587"><center><img src="menu/1.jpeg"width="300" height="400"></center></td>
-<td bgcolor="#f9e587"><center><img src="menu/2.jpeg"width="300" height="400"></center></td>
-<td bgcolor="#f9e587"><center><img src="menu/3.jpeg"width="300" height="400"></center></td>
-</tr>
-<tr>
-<td bgcolor="#f9e587"><center><img src="menu/4.jpeg"width="300" height="400"></center></td>
-<td bgcolor="#f9e587"><center><img src="menu/5.jpeg"width="300" height="400"></center></td>
-<td bgcolor="#f9e587"><center><img src="menu/6.jpeg"width="300" height="400"></center></td>
-</tr>
+<td bgcolor="#f9e587"><center><h3>-Pagina_1<br> -Pagina_2</h3></center></td>
+
 </table></center>
 
 <center><a href="index.html"> Boton de regreso </a></center>
