--- a/curso.html
+++ b/curso.html
@@ -53,7 +53,7 @@
 
  
 
-<center><a href="index.html.html"> Boton de regreso </a></center>
+<center><a href="index.html"> Boton de regreso </a></center>
 
 
 <center><h4 font="Comic Sans MS">Gracias por darte vuelta por esta página :D!</h4></center>
